# trading-platform-cpp

./: .gitignore  CMakeLists.txt  Untitled-1.sty  build.txt
backtester/: CMakeLists.txt  CMakelists.txt
backtester/include/: backtester.hpp  portfolio.hpp
backtester/src/: backtester.cpp  portfolio.cpp
cli/: CMakeLists.txt
cli/src/: main.cpp
core/: CMakeLists.txt  CmakeLists.txt
core/include/: datatypes.hpp  exceptions.hpp  logging.hpp  utils.hpp
core/src/: logging.cpp  utils.cpp
data/: CMakeLists.txt
data/include/: database_manager.hpp  upstox_api_client.hpp
data/src/: database_manager.cpp  upstox_api_client.cpp
indicators/: CMakeLists.txt  CMakelists.txt
indicators/include/: indicators.hpp  rsi_indicator.hpp  sma_indicator.hpp
indicators/src/: rsi_indicator.cpp  sma_indicator.cpp
strategies/: simple_sma_trend.json  sma_10_20_corss.json
strategy_engine/: CMakeLists.txt  CMakelists.txt
strategy_engine/include/: and_condition.hpp  common_types.hpp  indicator_condition.hpp  indicator_cross_condition.hpp  interfaces.hpp  or_condition.hpp  price_condition.hpp  price_indicator_condition.hpp  rule.hpp  strategy.hpp  strategy_factory.hpp
strategy_engine/src/: and_condition.cpp  indicator_condition.cpp  indicator_cross_condition.cpp  or_condition.cpp  price_condition.cpp  price_indicator_condition.cpp  rule.cpp  strategy.cpp  strategy_factory.cpp
